* Upgraded Javassist to version 3.16.1.GA.
* DeferSupportingClassLoader now overrides ClassLoader.findResources() which enables classes loaded by MockClassLoader to be to find resources via ClassLoader.findResources(...). Thanks to wrussellmorris for the patch (issue 380).

Change log 1.4.11 (2012-01-05)
------------------------------
* Fixed an OutOfMemory issue in PowerMockRunner (issue 346).
* Added Sfl4jMockPolicy to the Mockito extension API, thanks to Alexandre Normand for the patch.
* Replaced ${version} to ${project.version} in all pom files (thanks to pvdissel for the patch) (issue 287).
* Added work-around to stub some final system classes (such as java.util.UUID) (issue 354).
* Improved the PowerMock Java agent support. It should now work together with multiple java agents (thanks to Magnus Jungsbluth for the patch) (issue 357).
* Upgraded TestNG module to 6.3.1.
* Upgraded EasyMock extension API to use version 3.1 of EasyMock. This version should fix a couple of OutOfMemory issues.
* PowerMockito is updated to use Mockito 1.9.0
* setUp-method with @Before annotation is no longer executed twice when extending TestCase (issue 356)
* Upgraded classloader xstream deepcloner to XStream 1.4.2 (issue 345)

Change log 1.4.10 (2011-08-23)
------------------------------
* Added missing class, PowerMockTestCase, to testng full release jar (issue 327).
* Fixed test initialization error when using PowerMock Mockito API in Ant (issue 333).
* Upgraded to Javassist 3.15 GA (issue 338).
* Upgraded TestNG module to TestNG 6.2.
* Mockito @InjectMocks annotations on superclasses of test class are no longer ignored (issue 343).
* MockClassloader now defers the loading of classes in "org.pitest.*" to the system classloader. This means that you should be able to use PIT (http://pitest.org) without adding @PowerMockIgnore("org.pitest.*") to each test class (issue 337).